Fix z-index and body padding for the play alongs player and footer

--- a/src/assets/sass/partials/_play-alongs.scss
+++ b/src/assets/sass/partials/_play-alongs.scss
@@ -1,7 +1,11 @@
 @import './_variables.scss';
 
 body.play-alongs-player-open {
-  padding-bottom: 225px;
+  padding-bottom: 325px;
+
+  footer {
+    margin-bottom:263px;
+  }
 
   &.has-public-footer {
     padding-bottom:891px;
